...
            child: Padding(
              padding: const EdgeInsets.all(16.0),
              child: Container(
                color: Colors.white,
                padding: const EdgeInsets.all(16.0),
                child: Semantics(
                  label: 'Text area',
                  child: TextField(
                    controller: _textController,
                    keyboardType: TextInputType.multiline,
                    maxLines: null,
                    decoration: null,
                  ),
...
