...
                      _goToDirectory(_currentDirectory.parent);
                    },
                    tooltip: 'Go up directory',
                  ),
                  // File name text field.
                  Expanded(
                    key: const Key('File name text field'),
                    child: TextField(
                      controller: _textController,
                      decoration: const InputDecoration(
                        hintText: 'my_file.txt',
                        helperText: 'Enter a file name',
                      ),
...
